# mkdocs-protobuf

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements_lint.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
mkdocs_protobuf/: __init__.py  plugin.py
tests/: mkdocs.yml  test_protobuf.py  test_read.py
tests/docs/: index.md
tests/proto/: test.proto  test2.proto
