[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mkdocs_protobuf"
dist-name = "mkdocs_protobuf"
author = "Ryan Murray"
author-email = "rymurr@gmail.com"
home-page = "https://github.com/rymurr/mkdocs-protobuf"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
description-file = "README.md"
requires-python = ">=3.6"
requires = [
  "mkdocs==1.2.2"
]

[tool.flit.entrypoints.mkdocs.plugins]
mkdocs_protobuf = "mkdocs_protobuf.plugin:ProtobufDisplay"

[tool.flit.metadata.requires-extra]

[tool.flit.metadata.urls]
Documentation = "https://github.com/rymurr/mkdocs-protobuf"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mkdocs_protobuf"]

[tool.coverage.report]
show_missing = true
